# AI

./: 100-days-of-AI  100-days-of-AI.md  Headshot_Creator.ipynb  README.md
API to MCP/: mcpclient-example.py
API2MCP/: api-to-mcpserver.py  mcpclient-example.py  readme.md
RAG/: LangChain-Standard.py
Samples/: Autogen-Mistral3Large-Example.py  LiteLLM-Tool-Calling-Example.py  MAF-GPT-ToolCalling-Example.py  MAF-Gemini3Pro-ToolCalling-Example.py  README.md
Samples/CrewAI/crewai_helloworld/: README.md  pyproject.toml
Samples/CrewAI/crewai_helloworld/output/: architecture_audit_report.md
Samples/CrewAI/crewai_helloworld/src/crewai_helloworld/: crew.py  main.py
Samples/CrewAI/crewai_helloworld/src/crewai_helloworld/config/: agents.yaml  tasks.yaml
Whitepapers/: readme.md
