[project]
name = "crewai_helloworld"
version = "0.1.0"
description = "CrewAI-HelloWorld using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.7.2"
]

[project.scripts]
crewai_helloworld = "crewai_helloworld.main:run"
run_crew = "crewai_helloworld.main:run"
train = "crewai_helloworld.main:train"
replay = "crewai_helloworld.main:replay"
test = "crewai_helloworld.main:test"
run_with_trigger = "crewai_helloworld.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
